2004-04-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL: small update on PathInfo.
	* man/mod_mono.8: documented.

2004-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL: updated with new configuration information.

2004-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile.am: added 'man' directory.
	* autogen.sh: fixlet.
	* configure.in: attempt to make 1.3/2.0 detection fool-proof.

	* src/mod_mono.c: added the ability to spawn mod-mono-server if the
	named pipe is not there or is refusing connections. Added new
	configuration directives that control whether we want to spawn
	mod-mono-server, paths, applications...

	* man/.cvsignore:
	* man/Makefile.am:
	* man/mod_mono.8: empty man page (by now :).

2004-04-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: substitute APXS and small fix for TRY_COMPILE.

2004-04-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NEWS: updated.
	* INSTALL: details on the *NEW* setup for mod_mono. Existing
	installations will break. Added sample configurations.

	* autogen.sh: check for error when running autoheader.
	* configure.in: created a new conditional (APACHE2) and added a new
	AC_DEFINE with the same name so that mod_mono_config.h is updated if
	we change the target apache version and the sources are recompiled.

	* src/Makefile.am: use apxs to install the modules. It adds the
	LoadModule line automatically to the apache configuration file.

	* src/mod_mono.c: added some debug help. The request is accepted based
	on the handler name, not the content type.

2004-03-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NEWS: old stuff here.
	* src/Makefile.am: don't add libmod_mono_old.la to lib_LTLIBRARIES when
	we're not building mod_mono_old.

2004-02-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixed issues detecting the right version of apache in
	debian.

2003-12-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>
