@@ -4,6 +4,6 @@ Makefile
 Makefile.in
 ModMono.dbg
 ModMono.dll
-config.h
 libmod_mono.la
+libmod_mono_old.la
 mod_mono.lo
