@@ -1,3 +1,8 @@
+April 16, 2004 - Gonzalo Paniagua
+---------------------------------------
+More existing installation breakage. From now on, mod_mono is able to
+launch mod-mono-server.
+
 April 8, 2004 - Gonzalo Paniagua
 ---------------------------------------
 The changes today will break existing installations.  Check out the
